--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "hbs": "^4.0.1",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.3"
   }
 }
